--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<alert type="success">hello</alert>
+
+
 <div class="app-content">
   <!--<md-toolbar color="primary">-->
     <h2>Hypothetical</h2>
